src/game/game.css
.game-container {
  position: relative;
  width: 100vw;
  height: 100vh;
  background: black;
  overflow: hidden;
}

.player {
  position: absolute;
  top: 20px;
  width: 0;
  height: 0;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-top: 30px solid green;
  transform: translateX(-50%);
}

.bullet {
  position: absolute;
  width: 5px;
  height: 10px;
  background: red;
}

.blockRow {
  position: absolute;
  bottom: 10px;
  left: 0;
  right: 0;
  display: flex;
  justify-content: flex-start;
}

.row-number {
  color: white;
  font-size: 20px;
}

.enemy {
  height: 20px;
  background: blue;
  position: absolute;
  display: inline-flex; /* This allows the block to adjust its width based on the content */
  bottom: 0;
  margin-right: 10px;
  color: white; /* Text color */
  font-size: 1rem; /* Font size for the text */
  
}

